@@ -252,6 +252,8 @@ Trunk (unreleased changes)
 
         BOOKKEEPER-426: Make auditor Vote znode store a protobuf containing the host that voted (ivank)
 
+	BOOKKEEPER-428: Expose command options in bookie scripts to disable/enable auto recovery temporarily (ivank via fpj)
+
       hedwig-server:
 
         BOOKKEEPER-250: Need a ledger manager like interface to manage metadata operations in Hedwig (sijie via ivank)
